Fix svg alignments

--- a/src/components/toolList.module.css
+++ b/src/components/toolList.module.css
@@ -56,8 +56,8 @@
 }
 
 .tool-card svg {
-  width: 3rem;
-  height: 3rem;
+  width: 40px;
+  height: 40px;
   margin-right: auto;
   margin-bottom: .5rem;
   margin-left: auto;
